Doc key hook changes
* Moved from hark specific to uow.ui

--- a/catalog/catalog_changelog.html
+++ b/catalog/catalog_changelog.html
@@ -1,5 +1,9 @@
 <div id="changelogContainer" class="catChangelog catPage">
 	<h1>Changelog</h1>
+	<h2>v5</h2>
+	<ul>
+	  <li>Added <tt>uow.ui.connectKeys</tt> and <tt>uow.ui.disconnectKeys</tt>.</li>
+  </ul>
 	<h2>v4</h2>
 	<ul>
 	  <li>Added <a href="#ui">UI Widgets</a> documentation page with examples.</li>
