Updated catalog to doc hark integration
* Final notes for Maze Day 2011

--- a/catalog/catalog_changelog.html
+++ b/catalog/catalog_changelog.html
@@ -1,5 +1,9 @@
 <div id="changelogContainer" class="catChangelog catPage">
 	<h1>Changelog</h1>
+	<h2>v6</h2>
+	<ul>
+	  <li>Final hark.org integration doc for Maze Day 2011</li>
+	</ul>
 	<h2>v5</h2>
 	<ul>
 	  <li>Added <tt>uow.ui.connectKeys</tt> and <tt>uow.ui.disconnectKeys</tt>.</li>
