--- a/catalog/index.html
+++ b/catalog/index.html
@@ -42,7 +42,7 @@
           <h2>Intro</h2>
           <li>Getting started</li>
           <li>Developing web apps</li>
-          <li>harkthesound.org integration</li>
+          <li>Writing Hark games</li>
           <h2>APIs</h2>
           <li>Audio</li>
           <li>Authentication</li>
@@ -132,7 +132,7 @@
              href="catalog_changelog.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        v4 - <a href="#changelog">Changelog</a>
+        v6 - <a href="#changelog">Changelog</a>
       </div>
     </div>
   </body>
