--- a/catalog/catalog_hark.html
+++ b/catalog/catalog_hark.html
@@ -61,7 +61,7 @@
     <p>The media object contains the URL of a 96x96 pixel <em>icon</em> representing the game on the home page. It also includes an array of 320x240 pixel <em>screenshots</em> of the game which may be featured on the hark site.</p>
   
     <h3>attribution</h3>
-    <p>The optional attribution string can reference another JSON file containing attribution info for the game code and 3rd party resources (e.g., Creative Commons licensed images, sounds, and music). The top level object in this JSON file is an array. It contains further objects in the following form:</p>
+    <p>The attribution string can be empty or may reference another JSON file containing attribution info for the game code and 3rd party resources (e.g., Creative Commons licensed images, sounds, and music). The top level object in this JSON file is an array. It contains further objects in the following form:</p>
 
   <pre>{
       "name" : "hvylas.wav",
