--- a/catalog/catalog_audio.html
+++ b/catalog/catalog_audio.html
@@ -28,7 +28,7 @@
   <p><code>uow.getAudio(args) &rarr; dojo.Deferred</code></p>
   <div class="apidesc">
     <p>This method initializes the JSonic speech and sound interface for use in your application. You need to call this method only once per application.</p>
-    <p>The <tt>args</tt> parameter is the one passed to the <a href="http://parente.github.com/jsonic/js.html#the-jsonic-factory">JSonic factory documented here</a>. The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive a <a href="http://parente.github.com/jsonic/js.html#the-jsonic-interface"><tt>info.mindtrove.JSonic</tt> instance</a> for your use.</p>
+    <p>The <tt>args</tt> parameter is the one passed to the <a href="http://uncopenweb.github.com/jsonic/js.html#the-jsonic-factory">JSonic factory documented here</a>. The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>then</tt> on the deferred to register a callback function that will receive a <a href="http://uncopenweb.github.com/jsonic/js.html#the-jsonic-interface"><tt>info.mindtrove.JSonic</tt> instance</a> for your use.</p>
   </div>
   
   <h2>Examples</h2>
